Closed
Bug 1398304
Opened 8 years ago
Closed 8 years ago
Intermittent leakcheck | gpu process: 96 bytes leaked (TextureHost, TextureSourceProvider, nsTArray_base)
Categories
(Core :: Graphics: Layers, defect, P5)
Core
Graphics: Layers
Tracking
()
RESOLVED
FIXED
mozilla58
| Tracking | Status | |
|---|---|---|
| firefox-esr52 | --- | unaffected |
| firefox55 | --- | unaffected |
| firefox56 | --- | unaffected |
| firefox57 | --- | fixed |
| firefox58 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: dvander)
References
Details
(Keywords: intermittent-failure, memory-leak, Whiteboard: [gfx-noted][stockwell fixed:product])
Attachments
(1 file)
|
3.32 KB,
patch
|
bas.schouten
:
review+
Sylvestre
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
| Comment hidden (Intermittent Failures Robot) |
| Assignee | ||
Updated•8 years ago
|
Whiteboard: [gfx-noted]
Updated•8 years ago
|
status-firefox57:
--- → affected
Keywords: mlk
Comment 2•8 years ago
|
||
This and bug 1376658 are happening a lot on my 57-as-Beta Try simulations on Win8. Any ideas who might be able to investigate, Milan?
Flags: needinfo?(milan)
Updated•8 years ago
|
Flags: needinfo?(milan) → needinfo?(nical.bugzilla)
Comment 3•8 years ago
|
||
Hard to tell. I haven't been involved in any recent change that might have affected this. I'd probably look at whether there have been happenings in the GPU process video stuff but that's a wild guess. TextureSourceProvider appears to be related to advanced layers (not sure if anything has changed recently in that area either).
There are too many things that can hold on to (something that can hold on to) a TextureHost for me to think of anything else, but maybe Bas or dvander will have have ideas about the TextureSourceProvider stuff?
Flags: needinfo?(nical.bugzilla) → needinfo?(bas)
Comment 4•8 years ago
|
||
David or Jean-Yves, maybe one of you guys has an idea of something that could have changed in this area?
Flags: needinfo?(jyavenard)
Flags: needinfo?(dvander)
Flags: needinfo?(bas)
Comment 5•8 years ago
|
||
*Very* rough regression range (will work on trying to narrow it down a bit):
https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=fd87bb184e29&tochange=3a6d2e30bbe1
That would suggest advanced layers.
Flags: needinfo?(jyavenard)
I'll leave NI on Bas & David if this is AL related.
Flags: needinfo?(bas)
Comment 8•8 years ago
|
||
Couldn't this be related to the new try machines using windows 10 finally?
and as such it may have existed before but not be exposed?
Comment 9•8 years ago
|
||
They're happening on Win8 too, so no.
Comment 10•8 years ago
|
||
What about bug 1398659? Regression range is down to https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=fd87bb184e29&tochange=1f1893590a1d and I should have it down to a specific merge in the next 30-45min.
Comment 11•8 years ago
|
||
very unlikely to be bug 1398659, it doesn't touch anything related to IPC
Comment 12•8 years ago
|
||
https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=bf3d75d48631&tochange=a5f163da8a9b was indeed the regressing merge. So yeah, looks like Advanced Layers.
Comment 13•8 years ago
|
||
I agree this is most likely to be AdvancedLayers, what is holding onto the TextureHost when there's nothing -else- leaking though, that's rather mysterious.. TextureSourceProvider has two arrays so those are the arrays we're leaking. I wonder if it can happen if we end a frame at a certain stage that we have a reference cycle between a TextureHost holding on to a TextureSourceProvider and also being in one of the arrays.
| Comment hidden (Intermittent Failures Robot) |
Comment 15•8 years ago
|
||
Bug 1398993 made this go from ~75% failure rate to nonexistent on Beta57 (confirmed via bisection). Too early to say for sure if it had the same effect on regular trunk or not.
| Comment hidden (Intermittent Failures Robot) |
Comment 17•8 years ago
|
||
FWIW despite bug 1398993's title, it ended up disabling Stylo in any process other than a non-e10s main process or an e10s content process.
Comment 18•8 years ago
|
||
OrangeFactor is still showing some instances of this leak on trunk, but very low-volume.
https://treeherder.mozilla.org/logviewer.html#?job_id=131275907&repo=autoland
Updated•8 years ago
|
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
Comment 21•8 years ago
|
||
I see 50 failures in the last week:
https://brasstacks.mozilla.com/orangefactor/index.html?display=Bug&bugid=1398304
this seems to be across all tests we run on windows10 hardware (newer tests added in the last week primarily). We don't have a gpu instance for VMs to run the tests- we are working on moving browser-chrome to a VM which would reduce this frequency a bit.
:ryanvm is there a patch we can land to make this better- I see a lot of back and forth in the previous comments.
Flags: needinfo?(ryanvm)
Whiteboard: [gfx-noted] → [gfx-noted][stockwell needswork]
Comment 22•8 years ago
|
||
I don't know anything more about this beyond what was said in comment 15.
Flags: needinfo?(ryanvm)
Comment 23•8 years ago
|
||
:bas.schouten, is there work we could do here to fix this based on your comment 13?
Flags: needinfo?(bas)
| Assignee | ||
Comment 24•8 years ago
|
||
I'll do some diagnostics on try to see if we can't narrow this down.
Assignee: nobody → dvander
Status: NEW → ASSIGNED
Flags: needinfo?(bas)
| Comment hidden (Intermittent Failures Robot) |
| Assignee | ||
Comment 26•8 years ago
|
||
The only thing I can think of is that the cycle is formed by UnlockAfterComposition being called after layers has been shutdown, which is theoretically possible. If this happens we can just immediately invoke ReadUnlockTextures.
I did three try runs with this patch and didn't see any leaks. A single run without the patch did have leaks.
Attachment #8911041 -
Flags: review?(bas)
Comment 27•8 years ago
|
||
Comment on attachment 8911041 [details] [diff] [review]
fix
Review of attachment 8911041 [details] [diff] [review]:
-----------------------------------------------------------------
Good find.
Attachment #8911041 -
Flags: review?(bas) → review+
Comment 28•8 years ago
|
||
Pushed by danderson@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/4cda16f44d0f
Fix shutdown leak in TextureSourceProviderMLGPU. (bug 1398304, r=bas)
Comment 29•8 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
status-firefox58:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla58
Comment 30•8 years ago
|
||
Please request Beta approval on this when you get a chance.
status-firefox55:
--- → unaffected
status-firefox56:
--- → unaffected
status-firefox-esr52:
--- → unaffected
Flags: needinfo?(dvander)
| Comment hidden (Intermittent Failures Robot) |
| Assignee | ||
Comment 32•8 years ago
|
||
Comment on attachment 8911041 [details] [diff] [review]
fix
Approval Request Comment
[Feature/Bug causing the regression]: Advanced Layers
[User impact if declined]: Tiny memory leak on shutdown
[Is this code covered by automated tests?]: Yes
[Has the fix been verified in Nightly?]: Yes
[Needs manual test from QE? If yes, steps to reproduce]: No
[List of other uplifts needed for the feature/fix]:
[Is the change risky?]: No
[Why is the change risky/not risky?]: Small change to break a reference cycle
[String changes made/needed]:
Flags: needinfo?(dvander)
Attachment #8911041 -
Flags: approval-mozilla-beta?
Comment 33•8 years ago
|
||
Fix a memory leak + intermittent, taking it.
should be in 57b4
Updated•8 years ago
|
Attachment #8911041 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 34•8 years ago
|
||
| bugherder uplift | ||
Updated•8 years ago
|
Whiteboard: [gfx-noted][stockwell needswork] → [gfx-noted][stockwell fixed:product]
You need to log in
before you can comment on or make changes to this bug.
Description
•