Bug 1398304 - Fix shutdown leak in TextureSourceProviderMLGPU. r=bas, a=sledru