gfx/layers/mlgpu/TextureSourceProviderMLGPU.h
@@ -26,6 +26,7 @@ public:
   already_AddRefed<DataTextureSource>
   CreateDataTextureSourceAround(gfx::DataSourceSurface* aSurface) override;
 
+  void UnlockAfterComposition(TextureHost* aTexture) override;
   bool NotifyNotUsedAfterComposition(TextureHost* aTextureHost) override;
 
   int32_t GetMaxTextureSize() const override;
